# AI_Trip_Agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.en.md  README.md  docker-compose.yml  start-trip-planner.cmd
.github/workflows/: ci.yml
Docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_DESIGN.md  PRODUCT_REQUIREMENTS.md  PROJECT_SUMMARY.md  TECH_STACK.md  TESTING.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: clarification.py  graph.py  intent.py  llm_http.py  nodes.py  orchestrator.py  prompts.py  state.py
backend/app/api/: chat.py  health.py  router.py  session.py
backend/app/models/: db_models.py  schemas.py
backend/app/rag/: embeddings.py  ingest.py  vectorstore.py
backend/app/services/: __init__.py  cache.py  demo_itinerary.py  session.py
backend/app/tools/: __init__.py  mcp_client.py  poi_search.py  rag_search.py  route_plan.py  weather.py
backend/data/: beijing.json  chengdu.json  guiyang.json  shanghai.json
backend/db/: init.sql
backend/scripts/: smoke_chat_sse.py
backend/tests/: eval_ragas.py  test_agent.py  test_api.py  test_demo_itinerary.py  test_embeddings.py  test_eval_ragas.py  test_ingest.py  test_intent.py  test_services.py  test_smoke.py  test_tools.py  test_vectorstore.py
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: start-dev.ps1
(+59 files in other folders)
