[project]
name = "ai-trip-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn",
    "langgraph>=1.1.0,<2.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-mcp-adapters==0.2.2",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pgvector>=0.3.0,<0.4",
    "pydantic-settings",
    "redis>=5.0",
    "sentence-transformers>=3.0",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "datasets>=2.20,<4.0",
    "ragas>=0.2,<0.3",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
